--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,24 @@
 appdirs==1.4.4
 asgiref==3.2.10
+boto==2.49.0
+boto3==1.14.44
+botocore==1.17.44
 distlib==0.3.1
 dj-database-url==0.5.0
 Django==3.0.9
 django-crispy-forms==1.9.2
+django-storages==1.9.1
 django-tinymce==3.0.2
 django-widget-tweaks==1.4.8
+docutils==0.15.2
 filelock==3.0.12
 gunicorn==20.0.4
+jmespath==0.10.0
 Pillow==7.2.0
 psycopg2-binary==2.8.5
+python-dateutil==2.8.1
 pytz==2020.1
+s3transfer==0.3.3
+six==1.15.0
 sqlparse==0.3.1
-whitenoise==5.2.0
+urllib3==1.25.10
