--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ psycopg2-binary==2.8.5
 python-dateutil==2.8.1
 pytz==2020.1
 s3transfer==0.3.3
+selenium==3.141.0
 six==1.15.0
 sqlparse==0.3.1
 urllib3==1.25.10
